It's al ruby now.

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 WOE - Workers of Eruta 
 
-Woe is a MUD server scriptable with mruby, used to implement the Workers of Eruta MUD.
+Woe is a MUD server implemented in ruby, used to implement the Workers of Eruta 
+MUD.
 
 Workers of Eruta is set in the land of Eruta, 60000 years in the future.
+
 
