--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 WOE - Workers of Eruta 
 
-Woe is a MUD server implemented in ruby, used to implement the Workers of Eruta 
-MUD.
+Woe is a MUD server implemented in Go Language, used to implement the Workers of Eruta  MUD.
 
 Workers of Eruta is set in the land of Eruta, 60000 years in the future.
-
 
